add recheability-metadata.json